--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["Afonso Bordado <afonsobordado@az8.co>"]
 
 [dependencies]
-curl = "0.4.1"
+hyper = "0.9.13"
 serde = "0.8"
 serde_derive = "0.8"
 serde_json = "0.8"
