Add metadata to Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,11 @@
 name = "discogs"
 version = "0.1.0"
 authors = ["Afonso Bordado <afonsobordado@az8.co>"]
+description = "A Library to consume Discogs API"
+keywords = ["discogs", "api", client]
+license = "GPL-3.0+"
+repository = "https://github.com/afonso360/discogs-rs"
+
 
 [dependencies]
 hyper = "0.9.13"
