--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,10 +3,9 @@ name = "discogs"
 version = "0.1.0"
 authors = ["Afonso Bordado <afonsobordado@az8.co>"]
 description = "A Library to consume Discogs API"
-keywords = ["discogs", "api", client]
+keywords = ["discogs", "api", "client"]
 license = "GPL-3.0+"
 repository = "https://github.com/afonso360/discogs-rs"
-
 
 [dependencies]
 hyper = "0.9.13"
