--- a/.travis.yml
+++ b/.travis.yml
@@ -22,9 +22,8 @@ script:
     travis-cargo test
 
 after_script:
-  - |
-    travis-cargo coveralls --no-sudo
-
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then travis-cargo coveralls --no-sudo --verify; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then ./kcov/build/src/kcov --verify --coveralls-id=$TRAVIS_JOB_ID --exclude-pattern=/.cargo target/kcov target/debug/discogs-*; fi
 env:
   global:
     - TRAVIS_CARGO_NIGHTLY_FEATURE=""
