--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,9 @@ script:
     travis-cargo test
 
 after_script:
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then travis-cargo coveralls --no-sudo --verify; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then ./kcov/build/src/kcov --verify --coveralls-id=$TRAVIS_JOB_ID --exclude-pattern=/.cargo target/kcov target/debug/discogs-*; fi
+  - |
+    travis-cargo coveralls --no-sudo
+
 env:
   global:
     - TRAVIS_CARGO_NIGHTLY_FEATURE=""
