--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 language: rust
 rust:
-- stable
-- beta
-- nightly
+  - stable
+  - beta
+  - nightly
+os:
+  - osx
+  - linux
 matrix:
   fast_finish: true
 env:
