--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,10 @@ repository = "https://github.com/afonso360/discogs-rs"
 readme = "README.md"
 
 [dependencies]
-hyper = "0.9.13"
-serde = "0.8"
-serde_derive = "0.8"
-serde_json = "0.8"
+hyper = "^0.10.4"
+serde = "^0.9.7"
+serde_derive = "^0.9.7"
+serde_json = "^0.9.6"
+
+[dev-dependencies]
+mockito = "^0.2.4"
