--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 
 [dependencies]
 hyper = "^0.10.4"
+hyper-native-tls = "^0.2.2"
 serde = "^0.9.7"
 serde_derive = "^0.9.7"
 serde_json = "^0.9.6"
