--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ hyper-native-tls = "^0.2.2"
 serde = "^0.9.7"
 serde_derive = "^0.9.7"
 serde_json = "^0.9.6"
+itertools = "^0.5.9"
 
 [dev-dependencies]
 mockito = "^0.2.4"
