--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ addons:
 before_script:
     - |
         pip install 'travis-cargo<0.2' --user &&
-        export PATH=$HOME/.local/bin:$PATH<Paste>
+        export PATH=$HOME/.local/bin:$PATH
 
 script:
     - cargo build --verbose
